--- a/src/main/layout.module.css
+++ b/src/main/layout.module.css
@@ -44,3 +44,22 @@
   cursor: pointer;
   font-size: 15px;
 }
+.logoutcontainer {
+  width: 100%;
+  height: 100vh;
+  background-color: rgb(42, 40, 40);
+  margin-top: -25px;
+  color: aliceblue;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+.logoutcontainer :nth-child(2) {
+  color: aliceblue;
+  border: 3px solid black;
+  padding: 10px 40px;
+  background-color: rgb(23, 23, 23);
+  text-decoration: none;
+  font-size: 40px;
+}
